[tool.poetry]
name = "pyspark-advent-of-code"
version = "0.1.0"
description = "Advent of Code solutions using PySpark"
authors = ["David <davidcereijo@live.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
